# zippy-encryptor

./: Cargo.toml  README.md  build.js  chunk_test.js  convert.js  package-lock.json  package.json
.github/workflows/: publish.yml
example/: index.js  test-dect.txt  test.vkk
src/: crypto.rs  lib.rs  stream.rs
zippy-encryptor/: README.md  encryptor.darwin-arm64.node  index.d.ts  index.js  index.mjs  package.json
