[package]
name = "encryptor"
version = "0.1.0"
edition = "2021"

[dependencies]
napi = { version = "2.16.0", features = ["napi6"] }
napi-derive = "2.16.0"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
chacha20poly1305 = { version = "0.9", features = ["std"] }
rand = "0.8"
md-5 = "0.10.5"
hex = "0.4.3"

[build-dependencies]
napi-build = "2.1.6"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true